# console-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  tasks.json
.specify/memory/: constitution.md
history/adr/: 0001-cli-application-architecture.md
history/prompts/001-todo-app-cli/: 0001-documented-cli-architecture-adr.misc.prompt.md
history/prompts/002-fullstack-todo-app/: 0001-created-phase-ii-full-stack-spec.spec.prompt.md  0002-completed-phase-ii-implementation-plan.plan.prompt.md
history/prompts/constitution/: 0001-updated-multi-stack-constitution.constitution.prompt.md  1-create-todo-app-constitution.constitution.prompt.md
history/prompts/general/: 001-todo-app-cli-implementation.general.prompt.md
history/prompts/todo-app-cli/: 1-todo-app-cli-spec.spec.prompt.md  2-clarify-todo-app-cli-spec.spec.prompt.md  3-plan-todo-app-cli.plan.prompt.md  4-checklist-requirements-quality.misc.prompt.md  5-tasks-todo-app-cli.tasks.prompt.md  (+1 more)
phase-1(console-app)/: .gitignore  pyproject.toml  tasks.json
phase-1(console-app)/src/todo_app/: main.py
phase-1(console-app)/src/todo_app/cli/: commands.py  parsers.py
phase-1(console-app)/src/todo_app/utils/: serializers.py
phase-1(console-app)/tests/unit/: test_edge_cases.py  test_performance.py  test_recurring_tasks.py  test_task.py  test_task_manager.py
specs/001-todo-app-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-app/: plan.md  research.md  spec.md  tasks.md
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_validators.py
(+6 files in other folders)
